--- a/Codes.html
+++ b/Codes.html
@@ -1,4 +1,4 @@
-<!--Font awesome of des gasana-->
+<!--using Font awesome-->
 <!DOCTYPE html>
 <html>
 <head>
@@ -25,4 +25,4 @@
 </html>
 
 
-<!-- Nibyo mn we DES -->
+<!-- Nibyo mn we Bruce-->
